--- a/app/home/view/index/index.html
+++ b/app/home/view/index/index.html
@@ -199,6 +199,8 @@
                         type: 'warning'
                     });
                     this.data.profit = 0
+                    this.data.price = this.data.cost
+                    this.price = this.cost
                     return false;
                 }
 
