--- a/app/admin/view/common/public.html
+++ b/app/admin/view/common/public.html
@@ -48,8 +48,8 @@
                 <li class="layui-nav-item {if condition="$item == 'material'"}layui-this{/if}">
                     <a href="/admin/material">材料管理</a>
                 </li>
-                <li class="layui-nav-item">
-                    <a href="">数据管理</a>
+                <li class="layui-nav-item {if condition="$item == 'data'"}layui-this{/if}">
+                    <a href="/admin/data">数据管理</a>
                 </li>
             </ul>
         </div>
