--- a/app/admin/view/index/model.html
+++ b/app/admin/view/index/model.html
@@ -92,7 +92,7 @@
             ,curr: {$page}
             ,jump: function(obj, first) {
                 if(!first){
-                    window.location.href = "/admin/index?page=" + obj.curr + "&limit=" + obj.limit
+                    window.location.href = "/admin/model?page=" + obj.curr + "&limit=" + obj.limit
                 }
             }
         });
