--- a/app/admin/view/index/material.html
+++ b/app/admin/view/index/material.html
@@ -131,6 +131,18 @@
 <script>
     layui.use(['layer', 'form', 'laypage'], function(){
         let layer = layui.layer, form = layui.form, $ = layui.$, laypage = layui.laypage;
+
+        laypage.render({
+            elem: 'page'
+            ,count: {$count}
+            ,limit: {$limit}
+            ,curr: {$page}
+            ,jump: function(obj, first) {
+                if(!first){
+                    window.location.href = "/admin/material?page=" + obj.curr + "&limit=" + obj.limit
+                }
+            }
+        });
         
         $('#add').on('click', function(){
             let element = $('.alertBox').html();
@@ -198,7 +210,7 @@
                             form.render()
                             form.on('submit(submit)', function(obj) {
                                 obj.field.id = id
-                                $.post('/admin/model/editModelName', obj.field, function(resp){
+                                $.post('/admin/material/editMaterialInfo', obj.field, function(resp){
                                     if (resp.code != 0) {
                                         layer.msg(resp.errors, {icon: 5})
                                         return
@@ -214,40 +226,6 @@
                     });
                 }
             })
-            return
-
-            layer.open({
-                title: "修改材料信息",
-                type: 1,
-                skin: 'layui-layer-demo', //样式类名
-                closeBtn: 1,
-                anim: 2,
-                area: ['500px', '580px'],
-                shadeClose: false,
-                content: element,
-                success: function() {
-                    $('.layui-layer-content').find('.layui-form').attr('lay-filter', "editForm")
-                    form.val("editForm", {
-                        "name": nameId,
-                        "model_name": model_name
-                    })
-                    form.render()
-                    form.on('submit(submit)', function(obj) {
-                        obj.field.id = id
-                        $.post('/admin/model/editModelName', obj.field, function(resp){
-                            if (resp.code != 0) {
-                                layer.msg(resp.errors, {icon: 5})
-                                return
-                            } else {
-                                layer.closeAll()
-                                layer.msg("修改成功", {time: 1500, end: function(){
-                                        location.reload();
-                                    }});
-                            }
-                        });
-                    })
-                }
-            });
         })
 
         form.on('select(name)', function(data){
