--- a/app/home/view/index/index.html
+++ b/app/home/view/index/index.html
@@ -93,7 +93,7 @@
                     <el-input v-model="data.price" placeholder="" :disabled="true"></el-input>
                 </el-form-item>
                 <el-form-item class="btns">
-                    <el-button>保存数据</el-button>
+                    <el-button @click="saveData">保存数据</el-button>
                 </el-form-item>
             </el-form>
         </main>
@@ -209,7 +209,7 @@
                 this.data.price = sum.toFixed(3) + "/米"
             },
             isNumber: function(value) {
-                var patrn = /^(-)?\d+(\.\d+)?$/;
+                let patrn = /^(-)?\d+(\.\d+)?$/;
                 if (patrn.exec(value) == null || value == "") {
                      return false
                 } else {
@@ -217,7 +217,29 @@
                 }
             },
             saveData() {
-
+                if (this.tableList.length == 0) {
+                    this.$message({
+                        message: '暂无材料数据，无法保存',
+                        type: 'warning'
+                    });
+                    return false
+                }
+                this.loading = true
+                let param = {}
+                param.nameId = this.form.nameId
+                param.modelId = this.form.modelId
+                param.sizeId = this.form.sizeId
+                param.profit = this.data.profit
+                let _this = this
+                $.post('/home/saveData', param, function(resp) {
+                    _this.loading = false
+                    if (resp.code == 0) {
+                        _this.$message({
+                            message: '保存成功',
+                            type: 'success'
+                        });
+                    }
+                })
             }
         },
         filters: {
