--- a/app/admin/view/common/public.html
+++ b/app/admin/view/common/public.html
@@ -20,13 +20,11 @@
         <ul class="layui-nav layui-layout-right">
             <li class="layui-nav-item layui-hide layui-show-md-inline-block">
                 <a href="javascript:;">
-                    <img src="//tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg" class="layui-nav-img">
-                    Admin
+                    <img src="__STATIC__/header.jpg" class="layui-nav-img">
+                    {$userInfo.adminUserName ?? ""}
                 </a>
                 <dl class="layui-nav-child">
-                    <dd><a href="">Your Profile</a></dd>
-                    <dd><a href="">Settings</a></dd>
-                    <dd><a href="">Sign out</a></dd>
+                    <dd><a href="/admin/outlogin">退出登录</a></dd>
                 </dl>
             </li>
         </ul>
