--- a/app/admin/view/index/index.html
+++ b/app/admin/view/index/index.html
@@ -37,7 +37,7 @@
                     <td>
                         <div class="layui-btn-group">
                             <button type="button" class="layui-btn layui-btn-sm edit" value="{$value.id}" name="{$value.name}">编辑</button>
-                            <button type="button" class="layui-btn layui-btn-sm layui-btn-danger">删除</button>
+                            <button type="button" class="layui-btn layui-btn-sm layui-btn-danger" onclick="deleteData({$value.id})">删除</button>
                         </div>
                     </td>
                 </tr>
@@ -147,6 +147,24 @@
             });
         })
 
+        window.deleteData = function(id) {
+            layer.confirm('您确定要删除吗？', {
+                btn: ['确定','取消'] //按钮
+            }, function(){
+                $.post('/admin/delName', {id: id}, function(resp){
+                    if (resp.code != 0) {
+                        layer.msg(resp.errors, {icon: 5})
+                        return
+                    } else {
+                        layer.msg("删除成功", {time: 1500, end: function(){
+                                location.reload();
+                            }});
+                    }
+                });
+            }, function(){
+                return;
+            });
+        }
     });
 </script>
 {/block}
