--- a/public/static/login/css/style.css
+++ b/public/static/login/css/style.css
@@ -92,7 +92,7 @@
   .w3l-login {
       position: relative;
       height: 100vh;
-      background: url(../images/loginbg.jpg) no-repeat 0px 0px;
+      background: url(../images/bgimage.jpg) no-repeat 0px 0px;
       background-size: cover;
   }
 
