--- a/app/admin/view/index/size.html
+++ b/app/admin/view/index/size.html
@@ -94,13 +94,13 @@
         <div class="layui-form-item">
             <label class="layui-form-label">主线直径数</label>
             <div class="layui-input-block">
-                <input type="text" name="size_number" required  lay-verify="required" placeholder="主线直径数量" autocomplete="off" class="layui-input">
+                <input type="text" name="size_number"  placeholder="主线直径数量" autocomplete="off" class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">主线直径值</label>
             <div class="layui-input-block">
-                <input type="text" name="size_value" required  lay-verify="required" placeholder="主线直径值" autocomplete="off" class="layui-input">
+                <input type="text" name="size_value" placeholder="主线直径值" autocomplete="off" class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
